# YTL

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  _config.yml  appveyor.yml
Doxygen/: Doxyfile
Doxygen/html/: annotated.html  annotated_dup.js  classes.html  classytl_1_1observer__ptr-members.html  classytl_1_1observer__ptr.html  classytl_1_1observer__ptr.js  classytl_1_1observer__ptr_a0a9c228991c3f6618d3f6a6b2d7254ec_cgraph.map  classytl_1_1observer__ptr_a0a9c228991c3f6618d3f6a6b2d7254ec_cgraph.md5  classytl_1_1observer__ptr_a8d7a4291d689be4208754563668779a5_cgraph.map  classytl_1_1observer__ptr_a8d7a4291d689be4208754563668779a5_cgraph.md5  dir_1ec98ce50fa6ec55b40b8ffb1df38c3c.html  dir_1ec98ce50fa6ec55b40b8ffb1df38c3c.js  doxygen.css  files.html  functions.html  functions_func.html  functions_type.html  graph_legend.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces.js  namespaces_dup.js  namespaceytl.html  namespaceytl.js  namespaceytl_a3c99534ad66413b7d3fd1557123d0a0d_cgraph.map  namespaceytl_a3c99534ad66413b7d3fd1557123d0a0d_cgraph.md5  namespaceytl_a63b8082b479576cc7c1834d781ca8116_cgraph.map  namespaceytl_a63b8082b479576cc7c1834d781ca8116_cgraph.md5  navtree.css  navtreedata.js  navtreeindex0.js  ytl__algorithm_8hpp.html  ytl__algorithm_8hpp.js  ytl__algorithm_8hpp__incl.map  ytl__algorithm_8hpp__incl.md5  (+5 more)
header/: ytl_algorithm.hpp  ytl_fmt.hpp  ytl_memory.hpp  ytl_types.hpp  ytl_utils.hpp
test/: erase_remove.cpp  fmt.cpp  main.cpp  observer_ptr.cpp  result.cpp  zero_memory.cpp
(+30 files in other folders)
